# modelg

GLOCK_PROJECT/python/: mesh_exporter.py  orchestrator.py  render_cameras.py  sdf_glock.py
GLOCK_PROJECT/rust/: Cargo.toml
GLOCK_PROJECT/rust/src/: main.rs  model.rs  shader.wgsl
